Handling Restaurants TableView and Cell with their logic.

--- a/Just iOS Assignment/StoryBoards/Base.lproj/Main.storyboard
+++ b/Just iOS Assignment/StoryBoards/Base.lproj/Main.storyboard
@@ -16,9 +16,25 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="N5J-vf-jRv">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <inset key="separatorInset" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="N5J-vf-jRv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ATa-SQ-pOh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="N5J-vf-jRv" secondAttribute="bottom" id="TDA-aO-5sd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="N5J-vf-jRv" secondAttribute="trailing" id="WJt-y8-Yyb"/>
+                            <constraint firstItem="N5J-vf-jRv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bvw-PX-tbu"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="restaurantsTableView" destination="N5J-vf-jRv" id="Nzx-BP-mCq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
