--- a/Just iOS Assignment/Screens/Restaurants/View/RestaurantTableViewCell.xib
+++ b/Just iOS Assignment/Screens/Restaurants/View/RestaurantTableViewCell.xib
@@ -4,67 +4,90 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="57" id="KGk-i7-Jjw" customClass="RestaurantTableViewCell" customModule="Just_iOS_Assignment" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="97" id="KGk-i7-Jjw" customClass="RestaurantTableViewCell" customModule="Just_iOS_Assignment" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8L2-7P-xzf">
-                        <rect key="frame" x="16" y="16.5" width="4" height="4"/>
-                        <color key="backgroundColor" systemColor="systemGreenColor"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="4" id="CCc-4q-JO4"/>
-                            <constraint firstAttribute="width" constant="4" id="jsd-p6-gLq"/>
-                        </constraints>
-                    </view>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cPg-MR-NDi">
-                        <rect key="frame" x="24" y="8" width="280" height="41"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="cPg-MR-NDi">
+                        <rect key="frame" x="16" y="8" width="288" height="73"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurant name..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Itk-ng-LjN">
-                                <rect key="frame" x="0.0" y="0.0" width="280" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7vE-j2-oYR">
-                                <rect key="frame" x="0.0" y="20.5" width="280" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="59j-W0-XJX">
+                                <rect key="frame" x="0.0" y="0.0" width="288" height="73"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pHG-pS-55g">
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="24"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Restaurant name..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Itk-ng-LjN">
+                                                <rect key="frame" x="0.0" y="0.0" width="218" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oprn Aheaf" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IIK-Cp-tba">
+                                                <rect key="frame" x="218" y="0.0" width="70" height="24"/>
+                                                <color key="backgroundColor" name="greenColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="70" id="VJU-2g-XGe"/>
+                                                    <constraint firstAttribute="height" constant="24" id="aBo-0S-EL0"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="10"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Nkv-sO-jZE">
+                                        <rect key="frame" x="0.0" y="24" width="288" height="49"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DB4-aw-Npm">
+                                                <rect key="frame" x="0.0" y="0.0" width="46" height="49"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7vE-j2-oYR">
+                                                <rect key="frame" x="50" y="0.0" width="238" height="49"/>
+                                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                     </stackView>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="cPg-MR-NDi" secondAttribute="trailing" constant="16" id="6nI-6J-sEP"/>
-                    <constraint firstItem="8L2-7P-xzf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="9Ii-n4-rSv"/>
-                    <constraint firstItem="8L2-7P-xzf" firstAttribute="centerY" secondItem="Itk-ng-LjN" secondAttribute="centerY" id="FDk-aT-M6Q"/>
+                    <constraint firstAttribute="bottom" secondItem="cPg-MR-NDi" secondAttribute="bottom" constant="16" id="IqI-t2-H9L"/>
                     <constraint firstItem="cPg-MR-NDi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="L5X-Y9-9O0"/>
-                    <constraint firstAttribute="bottom" secondItem="cPg-MR-NDi" secondAttribute="bottom" constant="8" id="S2M-xm-R81"/>
-                    <constraint firstItem="cPg-MR-NDi" firstAttribute="leading" secondItem="8L2-7P-xzf" secondAttribute="trailing" constant="4" id="kqy-SI-aWi"/>
+                    <constraint firstItem="cPg-MR-NDi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="RWC-b6-ihR"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="restaurantNameLabel" destination="Itk-ng-LjN" id="OHA-pG-zNs"/>
+                <outlet property="sortingTitleLabel" destination="DB4-aw-Npm" id="pgo-tT-hCd"/>
                 <outlet property="sortingValueLabel" destination="7vE-j2-oYR" id="NUf-lh-thm"/>
-                <outlet property="statusViewFlag" destination="8L2-7P-xzf" id="F3t-eO-CTD"/>
+                <outlet property="statusLabel" destination="IIK-Cp-tba" id="NQG-aC-Y0P"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="92.075892857142847"/>
+            <point key="canvasLocation" x="144.92753623188406" y="130.91517857142856"/>
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <namedColor name="greenColor">
+            <color red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
